Improve random marker logic. Move data to parent directory.

--- a/notebook/anon_sep.ipynb
+++ b/notebook/anon_sep.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -47,6 +47,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
+    "import os\n",
     "\n",
     "import mne\n",
     "from mne.io import read_raw_ctf"
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -104,14 +105,14 @@
     "        if i == 0 and marker[0] > buffer:\n",
     "            random_marker.append(random.randint(buffer,marker[0]))\n",
     "        else:\n",
-    "            random_marker.append(random.randint(marker[i-1],marker[i]))\n",
-    "    random_marker.append(random.randint(marker[i], 72000-buffer))\n",
+    "            random_marker.append(random.randint(marker[i-1]+buffer,marker[i]-buffer))\n",
+    "    random_marker.append(random.randint(marker[i]+buffer, 72000-buffer))\n",
     "    return random_marker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ds directory : anonepi_09.ds\n",
+      "ds directory : /Users/mlion0200/GitRepo/bcni_epi/notebook/../data/anonepi_09.ds\n",
       "    res4 data read.\n",
       "    hc data read.\n",
       "    Separate EEG position data file not present.\n",
@@ -178,7 +179,7 @@
       "Picked positions of 21 EEG channels from channel info\n",
       "    21 EEG locations added to Polhemus data.\n",
       "    Measurement info composed.\n",
-      "Finding samples for anonepi_09.ds/anonepi_09.meg4: \n",
+      "Finding samples for /Users/mlion0200/GitRepo/bcni_epi/notebook/../data/anonepi_09.ds/anonepi_09.meg4: \n",
       "    System clock channel is available, checking which samples are valid.\n",
       "    1 x 72000 = 72000 samples from 206 chs\n",
       "Current compensation grade : 3\n",
@@ -198,14 +199,15 @@
     "windows=[]\n",
     "target=[]\n",
     "\n",
-    "path='anonepi_09.ds'\n",
-    "data, sampling_rate=load_data(path)\n",
+    "ds_name='anonepi_09.ds'\n",
+    "file_path = os.path.join(os.getcwd(), '..', 'data/'+ds_name)\n",
+    "data, sampling_rate=load_data(file_path)\n",
     "data_preprocessed = preprocessing(data)\n",
     "\n",
     "# add stimulus channel\n",
     "data_sti = addchannel(data_preprocessed)\n",
-    "marker_epi = markers(path+'/MarkerFile.mrk' , sampling_rate)\n",
-    "marker_non = random_markers(window_size, sampling_rate, marker)\n",
+    "marker_epi = markers(file_path+'/MarkerFile.mrk' , sampling_rate)\n",
+    "marker_non = random_markers(window_size, sampling_rate, marker_epi)\n",
     "event_1 = marker_epi + marker_non\n",
     "event_2 = [0] * (len(marker_epi)+len(marker_non))\n",
     "event_3 = [8] * len(marker_epi) + [9] * len(marker_non)\n",
