Comparison of classifiers in scikit-learn.

--- a/notebook/epi_classification.ipynb
+++ b/notebook/epi_classification.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -347,30 +347,166 @@
     }
    ],
    "source": [
-    "train_x_orig, test_x_orig, train_y_orig, test_y_orig = load_dataset(window_size=0.2, test_size=0.2, random_state=0)"
+    "train_x_orig, test_x_orig, train_y_orig, test_y_orig = load_dataset(window_size=0.2, test_size=0.33, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-359e04b9cd8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x_orig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples: 64\n",
+      "Number of testing examples: 32\n",
+      "train_x_orig shape: (64, 151, 121)\n",
+      "train_y shape: (64,)\n",
+      "test_x_orig shape: (32, 151, 121)\n",
+      "test_y shape: (32,)\n"
      ]
     }
    ],
    "source": [
-    "print(train_x_orig.to)"
+    "train_x_array = np.asarray(train_x_orig)\n",
+    "test_x_array = np.asarray(test_x_orig)\n",
+    "train_y_array = np.asarray(train_y_orig)\n",
+    "test_y_array = np.asarray(test_y_orig)\n",
+    "m_train = train_x_array.shape[0]\n",
+    "num_px = train_x_array.shape[1]\n",
+    "m_test = test_x_array.shape[0]\n",
+    "\n",
+    "print (\"Number of training examples: \" + str(m_train))\n",
+    "print (\"Number of testing examples: \" + str(m_test))\n",
+    "print (\"train_x_orig shape: \" + str(train_x_array.shape))\n",
+    "print (\"train_y shape: \" + str(train_y_array.shape))\n",
+    "print (\"test_x_orig shape: \" + str(test_x_array.shape))\n",
+    "print (\"test_y shape: \" + str(test_y_array.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def norm_and_reshape(train_x, test_x):\n",
+    "    train_x_norm = train_x_array.reshape(train_x_array.shape[0], train_x_array.shape[1] * train_x_array.shape[2])\n",
+    "    test_x_norm = test_x_array.reshape(test_x_array.shape[0], test_x_array.shape[1] * test_x_array.shape[2])\n",
+    "    train_x = normalize(train_x_norm, norm='l2')\n",
+    "    test_x = normalize(test_x_norm, norm='l2')\n",
+    "    return train_x, test_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_x, test_x = norm_and_reshape(train_x_array, test_x_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.gaussian_process import GaussianProcessClassifier\n",
+    "from sklearn.gaussian_process.kernels import RBF\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "names = [\"Nearest Neighbors\", \"Linear SVM\", \"RBF SVM\", \"Gaussian Process\",\n",
+    "         \"Decision Tree\", \"Random Forest\", \"Neural Net\", \"AdaBoost\",\n",
+    "         \"Naive Bayes\", \"QDA\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "classifiers = [\n",
+    "    KNeighborsClassifier(3),\n",
+    "    SVC(kernel=\"linear\", C=0.025),\n",
+    "    SVC(gamma=2, C=1),\n",
+    "    GaussianProcessClassifier(1.0 * RBF(1.0)),\n",
+    "    DecisionTreeClassifier(max_depth=5),\n",
+    "    RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
+    "    MLPClassifier(alpha=1),\n",
+    "    AdaBoostClassifier(),\n",
+    "    GaussianNB(),\n",
+    "    QuadraticDiscriminantAnalysis()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nearest Neighbors Score:  0.84375\n",
+      "Linear SVM Score:  0.4375\n",
+      "RBF SVM Score:  0.84375\n",
+      "Gaussian Process Score:  0.875\n",
+      "Decision Tree Score:  0.78125\n",
+      "Random Forest Score:  0.5625\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mlion0200/anaconda3/lib/python3.5/site-packages/sklearn/neural_network/multilayer_perceptron.py:563: ConvergenceWarning: Stochastic Optimizer: Maximum iterations reached and the optimization hasn't converged yet.\n",
+      "  % (), ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Net Score:  0.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, clf in zip(names, classifiers):\n",
+    "    clf.fit(train_x, train_y_array)\n",
+    "    score = clf.score(test_x, test_y_array)\n",
+    "    print(name, 'Score: ', score)"
    ]
   },
   {
